--- a/package.json
+++ b/package.json
@@ -20,7 +20,11 @@
     "@ngrx/effects": "^19.2.1",
     "@ngrx/store": "^19.2.1",
     "@ngrx/store-devtools": "^19.2.1",
+    "@tiptap/core": "^2.25.0",
+    "@tiptap/extension-underline": "^2.25.0",
+    "@tiptap/starter-kit": "^2.25.0",
     "bootstrap": "^5.3.6",
+    "ngx-editor": "^19.0.0-beta.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "^0.15.1"
